Muda implementação de getSegurosPorCliente